--- a/BulkyBookWeb/Views/Category/Delete.cshtml
+++ b/BulkyBookWeb/Views/Category/Delete.cshtml
@@ -1,23 +1,22 @@
 ﻿@model Category
 
 <form method="post" asp-action="Delete">
+    <input asp-for="Id" hidden />
     <div class="border p-3 mt-4">
         <div class="row pb-2">
-            <h2 class="text-primary">Remove Category</h2>
+            <h2 class="text-primary">Delete Category</h2>
             </hr>
         </div>
         @*<div asp-validation-summary="All"></div>*@
         <div class="mb-3">
             <label asp-for="Name">Name</label>
-            <input asp-for="Name" class="form-control">
-            <span asp-validation-for="Name" class="text-danger"></span>
+            <input asp-for="Name" disabled class="form-control">
         </div>
         <div class="mb-3">
             <label asp-for="DispalyOrder">Display Order</label>
-            <input asp-for="DispalyOrder" class="form-control">
-            <span asp-validation-for="DispalyOrder" class="text-danger"></span>
+            <input asp-for="DispalyOrder" disabled class="form-control">
         </div>
-        <button type="submit" class="btn btn-primary" style="width:150px">Delete</button>
+        <button type="submit" class="btn btn-danger" style="width:150px">Delete</button>
         <a asp-controller="Category" asp-action="Index" class="btn btn-secondary" style="width:150px">
             Back to List
         </a>
